# wf-fydecor

./: README.md  deco-button.cpp  deco-button.hpp  deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp  decoration.cpp  fydecor.xml  meson.build
